Task: Updated README.md file

--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -27,7 +27,8 @@
             <input id="year" type="text" class="form-control" placeholder="Year" name="year">
         </div>
     </div>
-    <button type="submit" class="btn btn-success">Success</button>
+    <br />
+    <button type="submit" class="btn btn-success">Success1</button>
 
 </form>
 
